[gd_scene load_steps=18 format=3 uid="uid://u1c3dahxx6i7"]

[ext_resource type="Texture2D" uid="uid://ceko50b2jkht5" path="res://UX_Sprite.png" id="1_06t4h"]
[ext_resource type="Script" uid="uid://bj4asfv8y443f" path="res://menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://d4a6stgcu2hxo" path="res://Fonts/Inter-Black.otf" id="2_7vrkn"]
[ext_resource type="FontFile" uid="uid://dyy1lfvmotoow" path="res://Fonts/Inkfree.ttf" id="4_jix8l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_06t4h"]
texture = ExtResource("1_06t4h")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0
region_rect = Rect2(381, 679, 83, 84)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("1_06t4h")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0
region_rect = Rect2(383, 569, 80, 80)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fu7sn"]
texture = ExtResource("1_06t4h")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0
region_rect = Rect2(844, 679, 84, 84)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("1_06t4h")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0
region_rect = Rect2(846, 569, 79, 80)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qe12f"]
texture = ExtResource("1_06t4h")
region_rect = Rect2(1227, 1012, 65, 73)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qtwp"]
texture = ExtResource("1_06t4h")
region_rect = Rect2(1227, 911, 65, 73)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glbon"]
texture = ExtResource("1_06t4h")
texture_margin_left = 7.0
texture_margin_top = 9.0
texture_margin_right = 7.0
region_rect = Rect2(407, 142, 152, 56)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nlkkf"]
texture = ExtResource("1_06t4h")
texture_margin_left = 10.0
texture_margin_top = 12.0
texture_margin_right = 10.0
region_rect = Rect2(237, 142, 152, 56)

[sub_resource type="Animation" id="Animation_fu7sn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menus/menu/menuBackground:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(300, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menus/menu/menuBackground/MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menus/menu/menuBackground/MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("title/gameTitle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("title/gameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("creditsButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("creditsButton:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("menus/menu:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("menus/credits:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("menus/credits/credits/MarginContainer/Label:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("menus/credits/credits:custom_minimum_size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(400, 300)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("menus/credits/credits/MarginContainer/exitButton:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("menus/credits/credits/MarginContainer/exitButton:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("menus/credits/credits/MarginContainer/Label:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_glbon"]
resource_name = "close_credits"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menus/menu/menuBackground/MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menus/menu/menuBackground/MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menus/menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("creditsButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("creditsButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("menus/credits:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("title/gameTitle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("menus/menu/menuBackground:custom_minimum_size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(300, 300)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("menus/credits/credits/MarginContainer/Label:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("menus/credits/credits:custom_minimum_size")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(400, 300), Vector2(0, 300)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("menus/credits/credits/MarginContainer/exitButton:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("menus/credits/credits/MarginContainer/exitButton:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("menus/credits/credits/MarginContainer/Label:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jix8l"]
resource_name = "open_credits"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menus/menu/menuBackground/MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menus/menu/menuBackground/MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menus/menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("creditsButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("creditsButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("menus/credits:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("title/gameTitle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("menus/menu/menuBackground:custom_minimum_size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(300, 300), Vector2(0, 300)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("menus/credits/credits/MarginContainer/Label:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("menus/credits/credits:custom_minimum_size")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 300), Vector2(400, 300)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("menus/credits/credits/MarginContainer/exitButton:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("menus/credits/credits/MarginContainer/exitButton:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.297893, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("menus/credits/credits/MarginContainer/Label:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7vrkn"]
resource_name = "open_menu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menus/menu/menuBackground:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(340, 340), Vector2(280, 280), Vector2(300, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menus/menu/menuBackground/MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333, 0.169174),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menus/menu/menuBackground/MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.169174, 0.269697),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("title/gameTitle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("title/gameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.333443),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("creditsButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("creditsButton:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jix8l"]
_data = {
&"RESET": SubResource("Animation_fu7sn"),
&"close_credits": SubResource("Animation_glbon"),
&"open_credits": SubResource("Animation_jix8l"),
&"open_menu": SubResource("Animation_7vrkn")
}

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_menu" type="MarginContainer" parent="." node_paths=PackedStringArray("credits_screen", "continue_game_button", "new_game_button", "options_button", "quit_button", "toggle_credits_return_button", "toggle_credits_open_button")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0
script = ExtResource("1_fu7sn")
credits_screen = NodePath("menus/credits")
continue_game_button = NodePath("menus/menu/menuBackground/MarginContainer/buttonContainer/continueGameButton")
new_game_button = NodePath("menus/menu/menuBackground/MarginContainer/buttonContainer/newGameButton")
options_button = NodePath("menus/menu/menuBackground/MarginContainer/buttonContainer/optionsButton")
quit_button = NodePath("menus/menu/menuBackground/MarginContainer/buttonContainer/quitButton")
toggle_credits_return_button = NodePath("menus/credits/credits/MarginContainer/exitButton/MarginContainer/toggleCreditsButton")
toggle_credits_open_button = NodePath("creditsButton/toggleCreditsButton")

[node name="title" type="VBoxContainer" parent="main_menu"]
layout_mode = 2

[node name="gameTitle" type="Label" parent="main_menu/title"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.313726, 0.121569, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.764706)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 24
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 70
text = "<Add Title Here>
"
horizontal_alignment = 1

[node name="menus" type="MarginContainer" parent="main_menu"]
layout_mode = 2
theme_override_constants/margin_bottom = 100

[node name="menu" type="VBoxContainer" parent="main_menu/menus"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 70

[node name="Control" type="Control" parent="main_menu/menus/menu"]
layout_mode = 2

[node name="menuBackground" type="NinePatchRect" parent="main_menu/menus/menu"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_06t4h")
region_rect = Rect2(1000, 400, 100, 100)
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="MarginContainer" type="MarginContainer" parent="main_menu/menus/menu/menuBackground"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 0

[node name="buttonContainer" type="VBoxContainer" parent="main_menu/menus/menu/menuBackground/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="continueGameButton" type="Button" parent="main_menu/menus/menu/menuBackground/MarginContainer/buttonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.172549, 0.262745, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxTexture_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxTexture_06t4h")
theme_override_styles/normal = SubResource("StyleBoxTexture_7vrkn")
text = "Continue"

[node name="newGameButton" type="Button" parent="main_menu/menus/menu/menuBackground/MarginContainer/buttonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.172549, 0.262745, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxTexture_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxTexture_06t4h")
theme_override_styles/normal = SubResource("StyleBoxTexture_7vrkn")
text = "New Game"

[node name="optionsButton" type="Button" parent="main_menu/menus/menu/menuBackground/MarginContainer/buttonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.172549, 0.262745, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxTexture_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxTexture_06t4h")
theme_override_styles/normal = SubResource("StyleBoxTexture_7vrkn")
text = "Help
"

[node name="quitButton" type="Button" parent="main_menu/menus/menu/menuBackground/MarginContainer/buttonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxTexture_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxTexture_jix8l")
text = "Quit
"

[node name="credits" type="VBoxContainer" parent="main_menu/menus"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="credits" type="NinePatchRect" parent="main_menu/menus/credits"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_06t4h")
region_rect = Rect2(1200, 400, 100, 100)
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="main_menu/menus/credits/credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Label" type="Label" parent="main_menu/menus/credits/credits/MarginContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("4_jix8l")
theme_override_font_sizes/font_size = 15
text = "Tiny Elf Sutdios

<TITLE>
<NAME>

<TITLE>
<NAME>

Double space between each
Fight for the order"
horizontal_alignment = 1

[node name="exitButton" type="VBoxContainer" parent="main_menu/menus/credits/credits/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="main_menu/menus/credits/credits/MarginContainer/exitButton"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 10

[node name="toggleCreditsButton" type="Button" parent="main_menu/menus/credits/credits/MarginContainer/exitButton/MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_qe12f")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qe12f")
theme_override_styles/normal = SubResource("StyleBoxTexture_8qtwp")

[node name="creditsButton" type="VBoxContainer" parent="main_menu"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="toggleCreditsButton" type="Button" parent="main_menu/creditsButton"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.172549, 0.262745, 0.203922, 1)
theme_override_fonts/font = ExtResource("4_jix8l")
theme_override_font_sizes/font_size = 14
theme_override_styles/hover = SubResource("StyleBoxTexture_glbon")
theme_override_styles/normal = SubResource("StyleBoxTexture_nlkkf")
text = "Credits"

[node name="AnimationPlayer" type="AnimationPlayer" parent="main_menu"]
libraries = {
&"": SubResource("AnimationLibrary_jix8l")
}
autoplay = "open_menu"

[connection signal="pressed" from="main_menu/menus/menu/menuBackground/MarginContainer/buttonContainer/newGameButton" to="main_menu" method="_on_new_game_button_pressed"]
[connection signal="pressed" from="main_menu/menus/menu/menuBackground/MarginContainer/buttonContainer/quitButton" to="main_menu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="main_menu/menus/credits/credits/MarginContainer/exitButton/MarginContainer/toggleCreditsButton" to="main_menu" method="_on_toggle_credits_button_pressed"]
[connection signal="pressed" from="main_menu/creditsButton/toggleCreditsButton" to="main_menu" method="_on_toggle_credits_button_pressed"]
